--- a/brown_rabbit/src/index.html
+++ b/brown_rabbit/src/index.html
@@ -10,6 +10,7 @@
             <img src="assets/twentyfour-logo.svg" alt="Twentyfour!"/>
             <h1 id="headline">
                 THE BROWN
+                THE WHITE -- TEXT WRITTEN FOR TRIAL
             </h1>
             <a target="_blank" href="../readme.md">Project description</a>
             <span> · </span>
