Initial html codes are written.

--- a/brown_rabbit/src/index.html
+++ b/brown_rabbit/src/index.html
@@ -7,7 +7,36 @@
     </head>
     <body>
         <div class="wrapper">
-            <img src="assets/twentyfour-logo.svg" alt="Twentyfour!"/>
+            <header class="header">
+                <nav>
+                    <div class="logo">
+                        <img src="assets/logo-white.png" alt="Logo" id="logo"/>
+                    </div>
+                    <div class="nav_content">
+                        <div>
+                            <ul>
+                                <li><input type="search" placeholder="search"></li>
+                                <li><img src="assets/icons/linkedin-white.svg" alt="LinkedIn icon"></li>
+                                <li><img src="assets/icons/twitter-white.svg" alt="Twitter icon"></li>
+                                <li><img src="assets/icons/instagram-white.svg" alt="Instagram icon"></li>
+                                <li><img src="assets/icons/facebook-white.svg" alt="Facebook icon"></li>
+                            </ul>
+                        </div>
+                        <div>
+                            <ul>
+                                <li>About us</li>
+                                <li>Events</li>
+                                <li>Nordic roaster</li>
+                                <li>Results</li>
+                                <li>Links</li>
+                                <li>Contact</li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </nav>
+
+            </header>
             <h1 id="headline">
                 THE BROWN
                 THE WHITE -- TEXT WRITTEN FOR TRIAL
