CSS initial commands written

--- a/brown_rabbit/src/index.html
+++ b/brown_rabbit/src/index.html
@@ -6,45 +6,44 @@
         <link rel="stylesheet" href="css/main.css" type="text/css" >
     </head>
     <body>
+
         <div class="wrapper">
             <header class="header">
-                <nav>
-                    <div class="logo">
-                        <img src="assets/logo-white.png" alt="Logo" id="logo"/>
+                <div class="logo">
+                    <img src="assets/logo-white.png" alt="Logo" id="logo"/>
+                </div>
+                <div class="nav_content">
+                    <div>
+                        <ul>
+                            <li><input type="search" placeholder="search"></li>
+                            <li><img src="assets/icons/linkedin-white.svg" alt="LinkedIn icon"></li>
+                            <li><img src="assets/icons/twitter-white.svg" alt="Twitter icon"></li>
+                            <li><img src="assets/icons/instagram-white.svg" alt="Instagram icon"></li>
+                            <li><img src="assets/icons/facebook-white.svg" alt="Facebook icon"></li>
+                        </ul>
                     </div>
-                    <div class="nav_content">
-                        <div>
-                            <ul>
-                                <li><input type="search" placeholder="search"></li>
-                                <li><img src="assets/icons/linkedin-white.svg" alt="LinkedIn icon"></li>
-                                <li><img src="assets/icons/twitter-white.svg" alt="Twitter icon"></li>
-                                <li><img src="assets/icons/instagram-white.svg" alt="Instagram icon"></li>
-                                <li><img src="assets/icons/facebook-white.svg" alt="Facebook icon"></li>
-                            </ul>
-                        </div>
-                        <div>
-                            <ul>
-                                <li>About us</li>
-                                <li>Events</li>
-                                <li>Nordic roaster</li>
-                                <li>Results</li>
-                                <li>Links</li>
-                                <li>Contact</li>
-                            </ul>
-                        </div>
-
+                    <div>
+                        <ul>
+                            <li>About us</li>
+                            <li>Events</li>
+                            <li>Nordic roaster</li>
+                            <li>Results</li>
+                            <li>Links</li>
+                            <li>Contact</li>
+                        </ul>
                     </div>
-                </nav>
-
+                </div>
             </header>
-            <h1 id="headline">
-                THE BROWN
-                THE WHITE -- TEXT WRITTEN FOR TRIAL
-            </h1>
-            <a target="_blank" href="../readme.md">Project description</a>
-            <span> · </span>
-            <a target="_blank" href="https://xd.adobe.com/view/e3a1c6ff-52f7-41ed-9e70-bad4e6e9b930-b6f2/grid"> See design</a>
+
+            <main>
+            
+            </main>
+
+            <footer>
+                
+            </footer>
         </div>
+
         <script src="js/scripts.js" type="text/javascript"></script>
     </body>
 </html>
