Sponsors part is added.

--- a/brown_rabbit/src/index.html
+++ b/brown_rabbit/src/index.html
@@ -84,6 +84,15 @@
                         </div>
                     </div>
                 </div>
+
+
+                <hr class="lineBreak">
+                <div class="sponsorContainer">
+                    <h2>Nordic Barista Cup Sponsors</h2>
+                    <div id="logos">            
+                    </div>
+                </main>
+                </div>
                   
             
             </main>
@@ -148,6 +157,7 @@
             </footer>
         </div>
 
+        <script src="js/data.js"></script>
         <script src="js/scripts.js" type="text/javascript"></script>
     </body>
 </html>
