Search function is written and tested.

--- a/brown_rabbit/src/index.html
+++ b/brown_rabbit/src/index.html
@@ -23,7 +23,7 @@
                         <ul>
                             <li class="searchBar">
                                 <img src="assets/icons/search.svg" alt="search icon"> 
-                                <input type="search" placeholder="search">  
+                                <input type="search" id="searchInput" placeholder="search" onkeydown="searchArticle()">  
                                 <hr class="searchBarRule">
                             </li>
                             <li><img src="assets/icons/linkedin-white.svg" alt="LinkedIn icon"></li>
